--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "mdb-react-ui-kit": "^8.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
