--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/jest-dom": "^6.4.8",
+    "@testing-library/react": "^16.0.0",
+    "@testing-library/user-event": "^14.5.2",
+    "glob": "^11.0.0",
+    "globby": "^14.0.2",
     "mdb-react-ui-kit": "^8.0.0",
+    "npm-force-resolutions": "^0.0.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-modal": "^3.16.1",
-    "react-router-dom": "^6.24.1",
-    "react-scripts": "5.0.1",
+    "react-router-dom": "^6.25.1",
+    "react-scripts": "^5.0.1",
     "react-scroll": "^1.9.0",
     "react-slideshow-image": "^4.3.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^4.2.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -23,7 +26,8 @@
     "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "preinstall": "npx npm-force-resolutions"
   },
   "eslintConfig": {
     "extends": [
