--- a/package.json
+++ b/package.json
@@ -7,10 +7,13 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
+    "bootstrap": "^5.3.3",
     "mdb-react-ui-kit": "^8.0.0",
     "npm-force-resolutions": "^0.0.10",
     "react": "^18.3.1",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "^5.0.1",
